# grafos

./: LICENSE  README.md  grafos.cabal  stack.yaml
src/: Lib.hs
src/Algoritmos/: BFS.hs  DFS.hs  Kruskal.hs
src/Estruturas/: Aresta.hs  Arvore.hs  Complexidade.hs  Descoberta.hs  Distancia.hs  Grafo.hs  ListaAdjacencia.hs  Pai.hs  Peso.hs  Vertice.hs  VetorRoteamento.hs
