name:                grafos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jean-lopes/grafos#readme
license:             BSD3
license-file:        LICENSE
author:              Jean Lopes
maintainer:          jean.lopes@hotmail.com.br
copyright:           2017 Jean Lopes
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , queue
  default-language:    Haskell2010

executable grafos-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , grafos
  default-language:    Haskell2010

test-suite grafos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grafos
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jean-lopes/grafos
